--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node --env-file .env dist/index.js",
+    "start": "node dist/index.js",
     "dev": "nodemon",
     "build": "tsc",
     "seed:categories": "node dist/prisma/seeders/generate-categories.js"
