--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "cd backend && npm install && npm run build && npm start"
+  command = "cd backend && npm install && npm run build"
   publish = "backend/dist"
